# LLMTrainingPerf

./: .gitignore  README.md  compare_strategies.py  find_max_batch_size.py  launch_comparison.ps1  launch_comparison.sh  main.py  pyproject.toml  run_full_comparison.sh
data/: sample_data.txt
training/: __init__.py  train_zero2.py  train_zero3.py
utils/: __init__.py  data_loader.py  fsdp_config.py  metrics_tracker.py  model_loader.py
