[project]
name = "llmtrainingperf"
version = "0.1.0"
description = "FSDP Zero2 vs Zero3 Performance Comparison for QWEN 1.5B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "torch-tb-profiler>=0.4.0",
    "nvidia-ml-py>=12.535.0",
    "psutil>=5.9.0",
]
